fixed spacing between message bubbles

--- a/discord_themes/TaskForce141_CV_v6.theme.css
+++ b/discord_themes/TaskForce141_CV_v6.theme.css
@@ -180,7 +180,7 @@
   background-color: var(--bubble-color,hsla(0, 0%, 100%, 0.1));
   padding: 7px;
   border-radius: 10px;
-  margin-top: 5px;
+  margin-top: 2px;
   margin-left: 0px;
 }
 .cozyMessage-1DWF9U:not(.systemMessage-1H1Z20):hover .messageContent-2t3eCI,
